--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stylei.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container" id="postContainer">
-        <!-- JavaScript will append posts here -->
     </div>
-    <script src="scripti.js"></script>
+    <script src="script.js"></script>
 
 
  
